--- a/frontend/src/styles/Help.module.scss
+++ b/frontend/src/styles/Help.module.scss
@@ -1,17 +1,17 @@
-@import "@styles/variables.scss";
+@import '@styles/variables.scss';
 
 .questions {
-
     max-width: 80%;
+    padding: 3.5rem;
     ul {
         list-style: circle;
     }
-    
+
     ol {
         list-style: decimal;
         margin-left: 10px;
     }
-    
+
     li {
         font-size: 20px;
         margin-left: 25px;
@@ -23,7 +23,8 @@
         margin-bottom: 20px;
     }
 
-    h2, h3 {
+    h2,
+    h3 {
         margin-top: 100px;
     }
 }
