Header bug fixed

--- a/frontend/src/components/Layout/Header/MainHeader.module.scss
+++ b/frontend/src/components/Layout/Header/MainHeader.module.scss
@@ -7,6 +7,10 @@
     position: fixed;
     z-index: 2;
     bottom: 10px;
+    // left: 50%;
+
+    // max-width: 1600px;
+    // transform: translateX(-50%);
 
     @screen md {
         padding: 3.5rem;
