--- a/frontend/src/styles/Legal.module.scss
+++ b/frontend/src/styles/Legal.module.scss
@@ -1,19 +1,17 @@
-@import "@styles/variables.scss";
+@import '@styles/variables.scss';
 
 .privacy {
-
-    max-width: 80%;
     ul {
         list-style: circle;
     }
-    
+
     ol {
         list-style: decimal;
         margin-left: 10px;
     }
-    
+
     li {
-        font-size: 20px;
+        font-size: clamp(1rem, 2vw, 1.5rem);
         margin-left: 25px;
         font-family: var(--font-inter);
     }
@@ -23,7 +21,8 @@
         margin-bottom: 20px;
     }
 
-    h2, h3 {
+    h2,
+    h3 {
         margin-top: 100px;
     }
 }
