removed animation by steps

--- a/frontend/src/components/Startpage/Steps/Steps.module.scss
+++ b/frontend/src/components/Startpage/Steps/Steps.module.scss
@@ -1,9 +1,9 @@
 .step {
 }
 .image {
-    animation: ltr 5s alternate infinite;
+    // animation: ltr 5s alternate infinite;
     object-fit: cover;
-    aspect-ratio: 16/9;
+    // aspect-ratio: 16/9;
     z-index: 1;
     margin-top: 1rem;
 }
