--- a/frontend/src/components/RecipeCard/RecipeCard.module.scss
+++ b/frontend/src/components/RecipeCard/RecipeCard.module.scss
@@ -41,6 +41,9 @@
         &:hover .weekplanBoxToday {
             background-color: var(--green-dark);
         }
+        &:hover .weekplanBox {
+            flex-direction: column;
+        }
     }
 
     @screen lg {
@@ -53,6 +56,8 @@
     background: linear-gradient(rgba(255, 255, 255, 0) 60%, var(--green-light) 90%);
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column-reverse;
     border-radius: $boder-radius;
     margin-inline: auto;
     margin-top: 10px;
@@ -81,21 +86,21 @@
     object-fit: cover;
     border-radius: $boder-radius;
     z-index: -5px;
-    transition: opacity 0.8s ease-in-out;
+    transition: opacity 0.6s ease-in-out;
 }
 
 .discriptionFood {
     padding: 10px;
-    transition: top 0.8s ease-in-out;
+    transition: top 0.6s ease-in-out;
     top: calc(100% - 30px);
-    position: absolute;
+    height: fit-content;
     width: 100%;
 }
 
 .discriptionHover {
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.6s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
     position: absolute;
     margin-top: 25px;
     width: 240px;
@@ -104,7 +109,7 @@
 .heartIcon {
     opacity: 0;
     position: absolute;
-    transition: all 0.8s ease-in-out;
+    transition: all 0.6s ease-in-out;
     top: calc(100% - 10px);
     width: 100%;
     fill: none;
