--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -29,6 +29,15 @@
     --gray-dark: rgb(58, 58, 58);
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
 body {
     position: relative;
 }
