wip: added focus state to default interactive elements, add focus state to custom checkbox

--- a/frontend/src/styles/_btns.scss
+++ b/frontend/src/styles/_btns.scss
@@ -1,6 +1,16 @@
 $btn-font-size: clamp(1rem, 2vw, 1.2rem);
 $btn-tertiary-font-size: clamp(1rem, 1.75vw, 1.125rem);
 
+button {
+    &:focus {
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+    }
+
+    &:focus-visible {
+        outline: unset;
+    }
+}
+
 .btn {
     display: block;
     border-radius: 60px;
