--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -15,6 +15,14 @@
             margin-bottom: 1.8rem;
         }
 
+        &:focus {
+            box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+        }
+
+        &:focus-visible {
+            outline: unset;
+        }
+
         &:hover {
             label {
                 background-color: var(--green-light);
@@ -41,6 +49,14 @@
         width: 100%;
         height: 100%;
         border-radius: 50px;
+
+        &:focus {
+            box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+        }
+
+        &:focus-visible {
+            outline: unset;
+        }
     }
 
     label {
@@ -57,6 +73,10 @@
         /* 28px */
         // color: var(--gray-dark);
         padding-left: 2rem;
+
+        &:focus {
+            box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+        }
     }
 
     input[type='radio']:checked + label,
