--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -1,19 +1,13 @@
 .preferencesWrapper {
-    display: grid;
-    flex-direction: column;
-    align-items: left;
+    grid-auto-flow: row;
+    align-items: center;
     width: 100%;
 
     .choiceWrapper {
         display: grid;
         grid-template-columns: repeat(2, minmax(0, 1fr));
         width: 100%;
-        // height: 60px;
         position: relative;
-
-        &:last-child {
-            margin-bottom: 1.8rem;
-        }
 
         &:focus {
             box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
