--- a/frontend/src/components/Intolerances/Intolerances.module.scss
+++ b/frontend/src/components/Intolerances/Intolerances.module.scss
@@ -1,9 +1,19 @@
-.intoleranceWrapper .containerField {
+.intoleranceWrapper {
     width: 100%;
     height: 50px;
     position: relative;
     border-radius: 50px;
     display: grid;
+
+    .intoleranceCustomFocus {
+        &:focus {
+            box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+        }
+
+        &:focus-visible {
+            outline: unset;
+        }
+    }
 
     &:hover {
         label {
