feat: add focus state to Footer and Recipe

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -53,6 +53,16 @@ a {
     }
 }
 
+.custom-focus {
+    &:focus {
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+    }
+
+    &:focus-visible {
+        outline: unset;
+    }
+}
+
 input {
     &:focus {
         box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
