--- a/frontend/src/components/SignUp/Register/Register.module.scss
+++ b/frontend/src/components/SignUp/Register/Register.module.scss
@@ -1,8 +1,9 @@
 .registerContainer {
     width: 100%;
+    height: 100%;
+    overflow-y: scroll;
     opacity: 0;
     z-index: 1;
-    height: 100%;
     transition: all 0.6s ease-in-out;
 
     @screen lg {
