--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -4,14 +4,6 @@
     width: 100%;
     position: relative;
 
-    &:focus {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
-    }
-
-    &:focus-visible {
-        outline: unset;
-    }
-
     &:hover {
         label {
             background-color: var(--green-light);
@@ -21,24 +13,7 @@
     }
 }
 
-label,
-input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    cursor: pointer;
-    z-index: 1;
-}
-
-input[type='radio'] {
-    opacity: 0.01;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    border-radius: 50px;
-
+.customFocus {
     &:focus {
         box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
     }
@@ -48,28 +23,8 @@ input[type='radio'] {
     }
 }
 
-label {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    border: 2px solid var(--gray-dark);
-    border-radius: 50px;
-    z-index: 90;
-    font-weight: 500;
-    font-size: 1.125rem;
-    /* 18px */
-    line-height: 1.75rem;
-    /* 28px */
-    // color: var(--gray-dark);
-    padding-left: 2rem;
-
-    &:focus {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
-    }
-}
-
-input[type='radio']:checked + label,
-.Checked + label {
+.radioBtn:checked + .radioLabel,
+.Checked + .radioLabel {
     background-color: var(--green-dark);
     color: var(--white);
     border: none;
