--- a/frontend/src/components/Dislikes/Dislikes.module.scss
+++ b/frontend/src/components/Dislikes/Dislikes.module.scss
@@ -1,24 +1,20 @@
 .dislikeWrapper {
     span {
         display: inline-block;
-        height: 40px;
         border: solid;
         border-radius: 50px;
         border: 2px solid var(--green-dark);
         background-color: var(--green-light);
-        padding: 10px;
-        padding-top: 5px;
         overflow: hidden;
         white-space: nowrap;
         width: max-content;
+        padding: 5px;
+        font-size: 0.8rem;
+        padding-left: 7px;
+        padding-right: 7px;
 
         label {
             align-items: center;
-        }
-
-        @screen lg {
-            height: 50px;
-            padding-top: 10px;
         }
     }
 }
