--- a/frontend/src/styles/_btns.scss
+++ b/frontend/src/styles/_btns.scss
@@ -1,4 +1,5 @@
 $btn-font-size: clamp(1rem, 2vw, 1.2rem);
+$btn-font-size-small: clamp(0.8rem, 1.5vw, 1rem);
 $btn-tertiary-font-size: clamp(1rem, 1.75vw, 1.125rem);
 
 button {
@@ -74,4 +75,8 @@ button {
         color: var(--green-semi);
         background-color: unset;
     }
+}
+
+.btn-small {
+    font-size: $btn-font-size-small;
 }
