--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -1,34 +1,71 @@
-.choiceWrapper {
+.preferencesWrapper {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    flex-direction: column;
+    align-items: left;
     width: 100%;
-    position: relative;
 
-    &:hover {
-        label {
-            background-color: var(--green-light);
-            color: var(--white);
-            border-color: var(--green-light);
+    .choiceWrapper {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        width: 100%;
+        // height: 60px;
+        position: relative;
+
+        &:last-child {
+            margin-bottom: 1.8rem;
+        }
+
+        &:hover {
+            label {
+                background-color: var(--green-light);
+                color: var(--white);
+                border-color: var(--green-light);
+            }
         }
     }
-}
 
-.customFocus {
-    &:focus {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+    label,
+    input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        cursor: pointer;
+        z-index: 1;
     }
 
-    &:focus-visible {
-        outline: unset;
+    input[type='radio'] {
+        opacity: 0.01;
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        border-radius: 50px;
     }
-}
 
-.radioBtn:checked + .radioLabel,
-.Checked + .radioLabel {
-    background-color: var(--green-dark);
-    color: var(--white);
-    border: none;
-    p {
+    label {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        border: 2px solid var(--gray-dark);
+        border-radius: 50px;
+        z-index: 90;
+        font-weight: 500;
+        font-size: 1.125rem;
+        /* 18px */
+        line-height: 1.75rem;
+        /* 28px */
+        // color: var(--gray-dark);
+        padding-left: 2rem;
+    }
+
+    input[type='radio']:checked + label,
+    .Checked + label {
+        background-color: var(--green-dark);
         color: var(--white);
+        border: none;
+        p {
+            color: var(--white);
+        }
     }
 }
