--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -2,6 +2,7 @@
     display: grid;
     flex-direction: column;
     align-items: left;
+    padding-top: 0.3rem;
     width: 100%;
 
     .choiceWrapper {
