fix: refactor food lifestyle component to tailwind

--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -1,72 +1,18 @@
-.preferencesWrapper {
-    display: grid;
-    flex-direction: column;
-    align-items: left;
-    padding-top: 0.3rem;
-    width: 100%;
-
-    .choiceWrapper {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        width: 100%;
-        // height: 60px;
-        position: relative;
-
-        &:last-child {
-            margin-bottom: 1.8rem;
-        }
-
-        &:hover {
-            label {
-                background-color: var(--green-light);
-                color: var(--white);
-                border-color: var(--green-light);
-            }
-        }
-    }
-
-    label,
-    input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        cursor: pointer;
-        z-index: 1;
-    }
-
-    input[type='radio'] {
-        opacity: 0.01;
-        z-index: 100;
-        width: 100%;
-        height: 100%;
-        border-radius: 50px;
-    }
-
-    label {
-        display: flex;
-        justify-content: left;
-        align-items: center;
-        border: 2px solid var(--gray-dark);
-        border-radius: 50px;
-        z-index: 90;
-        font-weight: 500;
-        font-size: 1.125rem;
-        /* 18px */
-        line-height: 1.75rem;
-        /* 28px */
-        // color: var(--gray-dark);
-        padding-left: 2rem;
-    }
-
-    input[type='radio']:checked + label,
-    .Checked + label {
-        background-color: var(--green-dark);
-        color: var(--white);
-        border: none;
-        p {
+.choiceWrapper {
+    &:hover {
+        label {
+            background-color: var(--green-light);
             color: var(--white);
+            border-color: var(--green-light);
         }
+    }
+}
+
+.customInput:checked + .customLabel {
+    background-color: var(--green-dark);
+    color: var(--white);
+    border: none;
+    p {
+        color: var(--white);
     }
 }
