--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -65,11 +65,21 @@ a {
 
 input {
     &:focus {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+        outline: unset;
     }
 
     &:focus-visible {
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
+    }
+}
+
+button {
+    &:focus {
         outline: unset;
+    }
+
+    &:focus-visible {
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
     }
 }
 
