--- a/frontend/src/styles/WeekOverview.module.scss
+++ b/frontend/src/styles/WeekOverview.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/variables.scss';
 
 .container {
-    margin-inline: auto;
+    // margin-inline: auto;
     h1 {
         color: var(--green-dark);
     }
@@ -18,13 +18,6 @@
     p {
         font-family: var(--font-inter);
         font-weight: 700;
-    }
-
-    .mySwiper {
-        display: none;
-        @screen sm {
-            display: block;
-        }
     }
 }
 
