--- a/frontend/src/components/Layout/Header/MainHeader.module.scss
+++ b/frontend/src/components/Layout/Header/MainHeader.module.scss
@@ -11,6 +11,7 @@
     @screen md {
         padding: 3.5rem;
         padding-top: 1rem;
+        padding-bottom: 1rem;
         bottom: auto;
     }
 
