--- a/frontend/src/components/Intolerances/Intolerances.module.scss
+++ b/frontend/src/components/Intolerances/Intolerances.module.scss
@@ -45,7 +45,7 @@
     label {
         display: flex;
         align-items: center;
-        border: 2px solid var(--gray-dark);
+        border: 2px solid var(--green-light);
         border-radius: 50px;
         z-index: 1;
         padding-left: 60px;
