fix: add valid property to z-index

--- a/frontend/src/components/RecipeCard/RecipeCard.module.scss
+++ b/frontend/src/components/RecipeCard/RecipeCard.module.scss
@@ -61,7 +61,7 @@
     border-radius: $boder-radius;
     margin-inline: auto;
     margin-top: 10px;
-    z-index: 5px;
+    z-index: 5;
     position: relative;
     overflow: hidden;
     margin-left: 0;
