fix: change dropdown selection depending on guest user

--- a/frontend/src/components/Layout/Header/MainHeader.module.scss
+++ b/frontend/src/components/Layout/Header/MainHeader.module.scss
@@ -52,6 +52,7 @@
     }
     .userIcon {
         &:hover {
+            cursor: pointer;
             color: var(--green-semi);
         }
         &:hover .dropdown {
@@ -77,6 +78,18 @@
                 }
             }
         }
+        
+        .guestUserDropdown {
+            &:hover {
+                background-color: var(--green-semi);
+                border-radius: 1rem;
+                color: var(--white);
+                p {
+                    color: var(--white);
+                }
+            }
+        }
+
 
         .userDropdown {
             &:hover {
