--- a/frontend/src/components/SignUp/Login/Login.module.scss
+++ b/frontend/src/components/SignUp/Login/Login.module.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: space-between;
 
+    overflow-y: auto;
+
     height: 100%;
     opacity: 0;
     transition: all 0.6s ease-in-out;
