--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -82,6 +82,10 @@ button {
     &:focus-visible {
         box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px #3a97f9;
     }
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+    }
 }
 
 input[type='submit'] {
