--- a/frontend/src/components/Startpage/Recipes/RecipesHome.module.scss
+++ b/frontend/src/components/Startpage/Recipes/RecipesHome.module.scss
@@ -7,6 +7,7 @@
     border-radius: 50%;
     justify-content: center;
     align-items: center;
+    position: relative;
     margin: 0 auto;
 
     @screen sm {
