--- a/frontend/src/styles/_text.scss
+++ b/frontend/src/styles/_text.scss
@@ -183,3 +183,32 @@ p,
     margin-bottom: 4px;
     font-size: $checkbox-label-font-size;
 }
+
+ul {
+    li.customItem {
+        list-style: none;
+        margin-bottom: 0.2rem;
+        align-items: center;
+        font-size: 1rem;
+        font-family: var(--font-inter);
+        font-weight: 600;
+        width: 99%;
+        padding-left: 1rem;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        &:before {
+            content: "";
+            width: 0.5rem;
+            height: 0.5rem;
+            border-radius: 100%;
+            background-color: var(--green-semi);
+            position: absolute;
+            left: 0;
+            display: inline-block;
+        }
+        @screen sm {
+            width: 70%;
+        }
+    }
+}
