--- a/frontend/src/components/DialogModal/DialogModal.module.scss
+++ b/frontend/src/components/DialogModal/DialogModal.module.scss
@@ -1,6 +1,18 @@
 @import '@styles/variables.scss';
 
-.modalOpen {
+.modal {
     overflow: hidden;
-    background-color: aqua;
+    min-width: 100vw;
+        max-width: 100vw;
+        min-height: 95vh;
+        max-height: 95vh;
+        margin-bottom: 0;
+
+    @screen sm {
+        min-width: min(80vw, 1180px);
+        max-width: min(80vw, 1180px);
+        min-height: 80vh;
+        max-height: 80vh;
+        margin-bottom: auto;
+    }
 }
