fix(landingpage): redesign

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -16,6 +16,9 @@
 
     --green-semi: #00a39e;
 
+    --orange: #ff840a;
+    --orange-lighter: #ff6b00;
+
     --black: #000000;
     --white: #fffffa;
 
