--- a/frontend/src/styles/_btns.scss
+++ b/frontend/src/styles/_btns.scss
@@ -93,11 +93,26 @@ $btn-tertiary-font-size: clamp(1rem, 1.75vw, 1.125rem);
 }
 
 .btn-small {
+    @extend .btn;
     font-size: $btn-font-size-small;
     @apply px-4;
 }
 
 .btn-big {
+    @extend .btn;
     font-size: $btn-font-size-big;
     @apply px-8;
+}
+
+.btn-create-weekplan {
+    @extend .btn-big;
+    color: var(--white);
+    background-color: var(--orange);
+    line-height: 1;
+    z-index: 20;
+    @apply py-4;
+
+    &:hover {
+        background-color: var(--orange-lighter);
+    }
 }
