--- a/frontend/src/components/ProgressBar/ProgressBar.module.scss
+++ b/frontend/src/components/ProgressBar/ProgressBar.module.scss
@@ -45,7 +45,8 @@
     font-size: 0.875rem; /* 14px */
     line-height: 1.25rem; /* 20px */
     white-space: nowrap;
-    color: var(--gray-5);
+    color: var(--gray-dark);
+    // font-weight: bolder;
 }
 
 .activeLabel {
