--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -47,13 +47,15 @@ body {
     position: relative;
 }
 
-a {
+a,
+span,
+div {
     &:focus {
         outline: unset;
     }
 
     &:focus-visible {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-dark-rgb);
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-semi);
     }
 }
 dialog::backdrop {
@@ -67,7 +69,7 @@ dialog::backdrop {
     }
 
     &:focus-visible {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-dark-rgb);
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-semi);
     }
 }
 
@@ -77,7 +79,8 @@ input:not([role='combobox']) {
     }
 
     &:focus-visible {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-dark-rgb);
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-semi);
+        opacity: 1 !important;
     }
 }
 
@@ -87,7 +90,7 @@ button {
     }
 
     &:focus-visible {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-dark-rgb);
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-semi);
     }
     &:disabled {
         cursor: not-allowed;
@@ -101,7 +104,7 @@ textarea {
     }
 
     &:focus-visible {
-        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-dark-rgb);
+        box-shadow: 0 0 0 2px #ffffff, 0 0 3px 5px var(--green-semi);
     }
 }
 input[type='submit'] {
