fix(all): tabindex

--- a/frontend/src/components/Layout/Header/MainHeader.module.scss
+++ b/frontend/src/components/Layout/Header/MainHeader.module.scss
@@ -48,11 +48,13 @@
         }
     }
     .userIcon {
-        &:hover {
+        &:hover,
+        &:focus-visible {
             cursor: pointer;
             color: var(--green-semi);
         }
-        &:hover .dropdown {
+        &:hover .dropdown,
+        &:focus-visible .dropdown {
             display: block;
             color: var(--black);
         }
@@ -61,12 +63,14 @@
     .dropdown {
         display: none;
 
-        &:hover {
+        &:hover,
+        &:focus-visible {
             display: block;
         }
 
         .settingsDropdown {
-            &:hover {
+            &:hover,
+            &:focus-visible {
                 background-color: var(--green-semi);
                 border-radius: 1rem 1rem 0 0;
                 color: var(--white);
@@ -77,7 +81,8 @@
         }
 
         .guestUserDropdown {
-            &:hover {
+            &:hover,
+            &:focus-visible {
                 background-color: var(--green-semi);
                 border-radius: 1rem;
                 color: var(--white);
@@ -88,7 +93,8 @@
         }
 
         .userDropdown {
-            &:hover {
+            &:hover,
+            &:focus-visible {
                 background-color: var(--green-semi);
                 border-radius: 0 0 1rem 1rem;
                 color: var(--white);
